--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,1 +1,8 @@
-echo "Hello World!"
+version: 0.2
+phases:
+  build:
+    commands:
+      - echo "Build successful."
+artifacts:
+  files:
+    - '**/*'
