--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,13 +2,13 @@ version: 0.2
 
 env:
   variables:
-    S3_BUCKET: "cinetrack-app-frontend"
-    CLOUDFRONT_DISTRIBUTION_ID: "E23WYKPFGKN4V4"
+    S3_BUCKET: "cinetrack-app-frontend"   # tên bucket của bạn
+    CLOUDFRONT_DISTRIBUTION_ID: "E23WYKPFGKN4V4"  # ID thật của CloudFront
 
 phases:
   install:
     runtime-versions:
-      nodejs: 22
+      nodejs: 18
     commands:
       - echo "Installing dependencies..."
       - cd frontend
@@ -16,14 +16,14 @@ phases:
 
   build:
     commands:
-      - echo "Building frontend..."
+      - echo "Building project..."
       - npm run build
 
   post_build:
     commands:
       - echo "Deploying to S3..."
       - aws s3 sync build/ s3://$S3_BUCKET --delete
-      - echo "Creating CloudFront invalidation..."
+      - echo "Invalidating CloudFront cache..."
       - aws cloudfront create-invalidation --distribution-id $CLOUDFRONT_DISTRIBUTION_ID --paths "/*"
 
 artifacts:
