--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,20 +1,32 @@
 version: 0.2
 
+env:
+  variables:
+    S3_BUCKET: "cinetrack-app-frontend"
+    CLOUDFRONT_DISTRIBUTION_ID: "E23WYKPFGKN4V4"
+
 phases:
   install:
     runtime-versions:
       nodejs: 18
     commands:
-      - echo Installing dependencies...
-      - npm install
+      - echo "Install deps"
+      - cd frontend
+      - npm ci
 
   build:
     commands:
-      - echo Building the React app...
+      - echo "Build frontend"
       - npm run build
+
+  post_build:
+    commands:
+      - echo "Sync to S3"
+      - aws s3 sync frontend/build s3://$S3_BUCKET/ --delete
+      - echo "Create CloudFront invalidation"
+      - aws cloudfront create-invalidation --distribution-id $CLOUDFRONT_DISTRIBUTION_ID --paths "/*" || echo "Invalidation failed (not critical)"
 
 artifacts:
   files:
     - '**/*'
-  base-directory: build
-  discard-paths: yes
+  base-directory: frontend/build
