--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,10 +3,10 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      nodejs: 18
+      nodejs: 22
     commands:
       - echo Installing dependencies...
-      - npm install
+      - npm install --legacy-peer-deps
   build:
     commands:
       - echo Building the React app...
