--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,6 +6,8 @@ phases:
       nodejs: 20
     commands:
       - echo Installing dependencies...
+      - npm cache clean --force
+      - rm -rf node_modules package-lock.json
       - npm install --legacy-peer-deps
   build:
     commands:
