--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,9 +6,8 @@ phases:
       nodejs: 20
     commands:
       - echo Installing dependencies...
-      - npm cache clean --force
-      - rm -rf node_modules package-lock.json
-      - npm install --legacy-peer-deps
+      - npm ci || npm install --legacy-peer-deps
+
   build:
     commands:
       - echo Building the React app...
