--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
       nodejs: 18
     commands:
       - echo "Installing dependencies..."
-      - cd frontend
+      - cd cinetrack-frontend
       - rm -rf node_modules package-lock.json
       - npm install --legacy-peer-deps
 
