--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,6 +13,7 @@ phases:
   build:
     commands:
       - echo "Building React app..."
+      - cd cinetrack-frontend
       - npm run build
 
   post_build:
@@ -22,4 +23,4 @@ phases:
 artifacts:
   files:
     - '**/*'
-  base-directory: build
+  base-directory: cinetrack-frontend/build
