--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,19 +6,15 @@ phases:
       nodejs: 18
     commands:
       - echo "Installing dependencies..."
-      - cd cinetrack-frontend
-      - npm install --legacy-peer-deps
+      - npm install --legacy-peer-deps --prefix cinetrack-frontend
 
   build:
     commands:
       - echo "Building React app..."
-      - cd cinetrack-frontend
-      - npm run build
-      - echo "Copying build to root..."
-      - cp -r build ../build
+      - npm run build --prefix cinetrack-frontend
       - echo "Build completed successfully!"
 
 artifacts:
   files:
     - '**/*'
-  base-directory: build
+  base-directory: cinetrack-frontend/build
