--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,19 +2,15 @@ version: 0.2
 
 phases:
   install:
-    runtime-versions:
-      nodejs: 18
     commands:
-      - echo "Installing dependencies..."
-      - npm install --legacy-peer-deps --prefix cinetrack-frontend
-
+      - echo Installing dependencies...
+      - cd cinetrack-frontend
+      - npm install
   build:
     commands:
-      - echo "Building React app..."
-      - npm run build --prefix cinetrack-frontend
-      - echo "Build completed successfully!"
-
+      - echo Building project...
+      - npm run build
 artifacts:
+  base-directory: cinetrack-frontend/dist
   files:
     - '**/*'
-  base-directory: cinetrack-frontend/build
