--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,6 +9,7 @@ phases:
   build:
     commands:
       - echo Building project...
+      - rm -rf build
       - npm run build
 artifacts:
   base-directory: cinetrack-frontend/dist
